# cora_robot

./: .gitignore  .gitmodules  README.md  commands.txt  cora_config.json  gripper_config.json  install.sh  populate.sh  requirements.txt
assets/: .gitignore
cora_bringup/: package.xml  setup.cfg  setup.py
cora_bringup/launch/: bringup.launch.py
cora_codi/: package.xml  setup.cfg  setup.py
cora_codi/config/: server_params.yaml
cora_codi/cora_codi/: codi.py
cora_description/: CMakeLists.txt  config.json  cora_config.json  gripper_config.json  package.xml
cora_description/urdf/: cora.urdf
cora_ethernet_driver/: CMakeLists.txt  package.xml
cora_gripper_1_description/: CMakeLists.txt
cora_gripper_1_description/urdf/: cora_gripper.ros2_control.xacro  cora_gripper.urdf
cora_interfaces/: CMakeLists.txt  odesc_resources.txt  package.xml
cora_moveit/: cora_moveit.repos  package.xml  setup.cfg  setup.py
cora_moveit/config/: cora_moveit.yaml  gripper_servo_parameters.yaml  servo_parameters.yaml
cora_moveit/cora_moveit/: gripper_node.py  mover_node.py  mover_node_test.py
cora_moveit/launch/: move.launch.py
cora_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
cora_moveit_config/config/: cora.ros2_control.xacro  cora.srdf  cora.urdf.xacro  joint_limits.yaml  kinematics.yaml  (+2 more)
cora_msgs/: CMakeLists.txt  package.xml
cora_vision/: package.xml  setup.cfg  setup.py
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
log/: latest_build
odrive_ros2_control/: README.md  odrive_hardware_interface.xml  package.xml
(+252 files in other folders)
