<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cora_moveit</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="M.J.deLannoy@student.tudelft.nl">matt</maintainer>
  <license>TODO: License declaration</license>

  <depend>moveit2</depend>
  <depend>moveit_msgs</depend>
  <depend>moveit_task_constructor</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
